API完成第一版/修改react訂單流程(追加按鈕...etc

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .vscode
 front_end/node_modules/
 front_end/public/
+
+back_end/db.sqlite3
+back_end/back_end/__pycache__/
+back_end/app_00/migrations/
