--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,7 +13,8 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
+    "react-slick": "^0.28.1",
     "react-waypoint": "^9.0.3"
   },
   "scripts": {
